# gr712rc-emulator-qemu

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  NOTES.md  README.md  docker-compose.yml  mkdocs.yml
.github/workflows/: docs.yml
apps/01-hello-rtems/: Makefile  hello.c
apps/02-dual-core-timer/: Makefile  dual_core_timer.c
apps/03-five-uarts/: Makefile  five_uarts.c
apps/04-mkprom-boot/: Makefile  README.md  gr712rc-prom.elf  mkprom_boot.c
apps/05-scriptable-stub/: Makefile  gr712rc-scriptable.yaml  grspw0.lua  scriptable_stub.c
apps/06-grspw-echo/: Makefile  README.md  grspw_echo.c
apps/07-hello-gr740/: Makefile  hello.c
apps/08-gr740-smp/: Makefile  quad_core_timer.c
apps/09-grspw-echo-gr740/: Makefile  README.md  grspw_echo_gr740.c
apps/10-mmio-probe/: Makefile  mmio_probe.c
docs/: 01-qemu-primer.md  02-code-map.md  03-adding-a-peripheral.md  04-debugging.md  05-contributing.md  06-uart-socket-interface.md  07-adapter-api.md  08-running-the-service.md  09-portable-export.md  10-gr740-ipcores.md  11-embedding-as-library.md  12-host-side-peripherals.md  13-icount-step-pacing.md  13-step-floor-redesign.md  14-co-simulation-scheduling.md  README.md  index.md
embed/: embed_qemu.c  embed_qemu.h
embed/examples/gr740/: main.c  (+2 more)
service/: pyproject.toml
service/adapter/: machines.py  main.py  models.py  qemu.py  spw.py  uart.py
toolchain/: README.md
tools/: spw-echo-peer.py
ui/: INTEGRATION.md  app.jsx  bus-timeline.jsx  chrome.jsx  gpio-board.jsx  index.html  machine-view.jsx  panels.jsx  sidepanel.jsx  store.jsx  styles.css
(+38 files in other folders)
