[project]
name = "qemu-emulator-adapter"
version = "0.1.0"
description = "FastAPI adapter for the GR712RC / GR740 QEMU emulator (issue #14)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "qemu.qmp>=0.0.3",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["adapter*"]
